...
            "value": "Verbinden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connect"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Conectar"
...
            "value": "Passwort"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Contraseña"
...
            "value": "Benutzername"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "User name"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nombre de usuario"
...
            "value": "Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
...
    "smb.host.label": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Host"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Host"
...
            "value": "Freigabe"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Recurso"
...
            "value": "Aus diesem Ordner lesen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Read from this folder"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Leer de esta carpeta"
...
            "value": "Ein Computer in Ihrem Netzwerk"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "A computer on your network"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Un ordenador de tu red"
...
